Bug reported in Distance Martix

--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -277,16 +277,8 @@
       "---------------------\n",
       "---------------------\n",
       "---------------------\n",
-      "updated List == Dict{Int64,Array}(Pair{Int64,Array}(7, [3, 5, 8]),Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(2, [5]),Pair{Int64,Array}(3, [7]),Pair{Int64,Array}(5, [7, 6, 1, 2]),Pair{Int64,Array}(8, [7, 6]),Pair{Int64,Array}(6, [4, 5, 8]),Pair{Int64,Array}(1, [5]))\n",
-      "length of list: 8\n",
-      "listToMatrix == [0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0]\n",
-      "Matrix1: [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "distMatrix[0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "Matrix2: [0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
-      "Initial[0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
-      "Floyd[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-      "----\n",
-      "---\n",
+      "naman Input Matrix = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "naman Output Matrix = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
       "--\n",
       "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2]))---------------------\n",
       "---------------------\n",
@@ -296,16 +288,8 @@
       "---------------------\n",
       "---------------------\n",
       "---------------------\n",
-      "updated List == Dict{Int64,Array}(Pair{Int64,Array}(7, [1, 2, 5, 8]),Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [5]),Pair{Int64,Array}(5, [7, 6, 3]),Pair{Int64,Array}(8, [7, 6]),Pair{Int64,Array}(6, [4, 5, 8]),Pair{Int64,Array}(1, [7]))\n",
-      "length of list: 8\n",
-      "listToMatrix == [0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0]\n",
-      "Matrix1: [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "distMatrix[0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "Matrix2: [0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-      "Initial[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-      "Floyd[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-      "----\n",
-      "---\n",
+      "naman Input Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "naman Output Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
       "--\n",
       "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-4]),Pair{Int64,Array}(-4, [-2, -3, 4]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(1, [-2]))---------------------\n",
       "---------------------\n",
@@ -315,16 +299,8 @@
       "---------------------\n",
       "---------------------\n",
       "---------------------\n",
-      "updated List == Dict{Int64,Array}(Pair{Int64,Array}(7, [1, 2, 5, 8]),Pair{Int64,Array}(4, [5]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [6]),Pair{Int64,Array}(5, [7, 6, 4]),Pair{Int64,Array}(8, [7, 6]),Pair{Int64,Array}(6, [3, 5, 8]),Pair{Int64,Array}(1, [7]))\n",
-      "length of list: 8\n",
-      "listToMatrix == [0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0]\n",
-      "Matrix1: [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "distMatrix[0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "Matrix2: [0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-      "Initial[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-      "Floyd[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-      "----\n",
-      "---\n",
+      "naman Input Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "naman Output Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
       "Dict{Int64,Array}[Dict{Int64,Array}(Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(-4, [7, 6, 1, 2]),Pair{Int64,Array}(-3, [4, 5, 8]),Pair{Int64,Array}(2, [5]),Pair{Int64,Array}(3, [7]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(-2, [3, 5, 8]),Pair{Int64,Array}(1, [5])), Dict{Int64,Array}(Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(-4, [7, 6, 3]),Pair{Int64,Array}(-3, [4, 5, 8]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(-2, [1, 2, 5, 8]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(3, [5]),Pair{Int64,Array}(1, [7])), Dict{Int64,Array}(Pair{Int64,Array}(4, [5]),Pair{Int64,Array}(-4, [7, 6, 4]),Pair{Int64,Array}(-3, [3, 5, 8]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [6]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(-2, [1, 2, 5, 8]),Pair{Int64,Array}(1, [7]))]\n",
       "Make Distance Matrices\n"
      ]
@@ -333,17 +309,21 @@
    "source": [
     "include(\"DistanceMatrix.jl\")\n",
     "\n",
-    "function operateDistMatrix(aList)\n",
+    "function operateDistMatrix(mat)\n",
     "# Make the Set method to work 1st August\n",
-    "    setAdjacencyList(aList)\n",
-    "\n",
-    "    for i=1:length(aList[:,1])\n",
+    "#     setAdjacencyList(aList)\n",
+    "    aList=mat\n",
+    "    distMatrix =  copy(aList)\n",
+    "    println(\"naman Input Matrix = \",distMatrix)\n",
+    "    \n",
+    "    for i=1:length(mat[:,1])\n",
     "        visited=[]\n",
     "        depth=0\n",
-    "        distFunc(aList, i, i,visited,depth)\n",
+    "        distFunc(mat, i, i,visited,depth)\n",
     "    end\n",
-    "\n",
-    "    return (returnDistanceMatrix())\n",
+    "    \n",
+    "    println(\"naman Output Matrix = \",distMatrix)\n",
+    "    return distMatrix\n",
     "end\n",
     "        \n",
     "# aList = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
@@ -358,10 +338,11 @@
     "#  Floyd Warshall Test with real data\n",
     "function floydWarshall(dists)  # graph is 4x4\n",
     "    n = 8\n",
-    "    println(\"Initial\", dists)\n",
+    "    println(\"Initial floyd\", dists)\n",
     "    for k = 1 : n, i = 1 : n, j = 1 : n\n",
     "        dists[i, j] = min(dists[i, k] + dists[k, j],dists[i,j])\n",
     "    end\n",
+    "    println(\"akhri floyd\", dists)\n",
     "    return (dists)\n",
     "end\n",
     "# function floydWarshall(dists)  # graph is 4x4\n",
@@ -473,11 +454,6 @@
     "        internalVertex -= 1\n",
     "        h=internalVertex\n",
     "\n",
-    "#         println(\"v0=\",v0)\n",
-    "#         println(\"p=\",p)\n",
-    "#         println(\"q\",q)\n",
-    "#         println(\"h=\",h)\n",
-    "\n",
     "    #     (p,u), (p,h), (q,v),(q,h)\n",
     "        addVertex(adjListR,p,u)\n",
     "        addVertex(adjListR,p,[h])\n",
@@ -530,8 +506,8 @@
     "function listToMatrix(list)\n",
     "    matrix = Array{Int64}(length(list),length(list))\n",
     "    fill!(matrix,0)\n",
-    "    println(\"length of list: \", length(list))\n",
-    "    println(\"listToMatrix == \",matrix)\n",
+    "#     println(\"length of list: \", length(list))\n",
+    "#     println(\"listToMatrix == \",matrix)\n",
     "    for i =1:length(list),j=1:length(list)\n",
     "        if(any(x->x==j, list[i])) #if (list[i] conatins j)\n",
     "            matrix[i,j] =1\n",
@@ -587,25 +563,18 @@
     "            \n",
     "        #     maxOfKeys = maximum(keys(updatedList))\n",
     "        end\n",
-    "        println(\"updated List == \",updatedList)\n",
+    "#         println(\"updated List == \",updatedList)\n",
     "        matrix= listToMatrix(updatedList)\n",
-    "        println(\"Matrix1: \", matrix)\n",
+    "#         println(\"Matrix1: \", matrix)\n",
     "        matrix2= operateDistMatrix(matrix)\n",
-    "        println(\"Matrix2: \", matrix2)\n",
-    "        println(\"Floyd\",floydWarshall(matrix2))\n",
-    "        println(\"----\")\n",
+    "#         println(\"Matrix2: \", matrix2)\n",
+    "#         println(\"Floyd\",floydWarshall(matrix2))\n",
     "#         print(\"convert to matrix\",matrix)\n",
-    "        \n",
-    "        println(\"---\")\n",
     "    end\n",
     "    println(adjLists)\n",
     "    \n",
     "    println(\"Make Distance Matrices\")\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "#     matrix = listToMatrix(updatedList)\n",
     "    \n",
     "#     println(\"AdjacencyMatrix = \",matrix)\n",
@@ -615,7 +584,6 @@
     "#     println(\"distance matrix = \", distanceMatrix)\n",
     "end\n",
     "parseAdjList()\n",
-    "\n",
     "\n",
     "# TODO next step to make zeros 2d array in list to matrix\n",
     "# graph = [[0,   5,  Inf, 10],[Inf, 0,   3, Inf],\n",
