--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -278,7 +278,10 @@
       "---------------------\n",
       "---------------------\n",
       "naman Input Matrix = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "naman Output Matrix = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "naman Output Matrix = [0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
+      "Matrix2: [0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
+      "Initial floyd[0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
+      "Floyd[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
       "--\n",
       "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2]))---------------------\n",
       "---------------------\n",
@@ -289,7 +292,10 @@
       "---------------------\n",
       "---------------------\n",
       "naman Input Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "naman Output Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "naman Output Matrix = [0 2 3 4 2 3 1 4; 2 0 3 4 2 3 1 4; 3 3 0 3 1 2 4 3; 4 4 3 0 2 1 3 4; 2 2 1 2 0 1 1 2; 3 3 2 1 1 0 2 1; 1 1 4 3 1 2 0 1; 4 4 3 4 2 1 1 0]\n",
+      "Matrix2: [0 2 3 4 2 3 1 4; 2 0 3 4 2 3 1 4; 3 3 0 3 1 2 4 3; 4 4 3 0 2 1 3 4; 2 2 1 2 0 1 1 2; 3 3 2 1 1 0 2 1; 1 1 4 3 1 2 0 1; 4 4 3 4 2 1 1 0]\n",
+      "Initial floyd[0 2 3 4 2 3 1 4; 2 0 3 4 2 3 1 4; 3 3 0 3 1 2 4 3; 4 4 3 0 2 1 3 4; 2 2 1 2 0 1 1 2; 3 3 2 1 1 0 2 1; 1 1 4 3 1 2 0 1; 4 4 3 4 2 1 1 0]\n",
+      "Floyd[0 2 3 4 2 3 1 2; 2 0 3 4 2 3 1 2; 3 3 0 3 1 2 2 3; 4 4 3 0 2 1 3 2; 2 2 1 2 0 1 1 2; 3 3 2 1 1 0 2 1; 1 1 2 3 1 2 0 1; 2 2 3 2 2 1 1 0]\n",
       "--\n",
       "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-4]),Pair{Int64,Array}(-4, [-2, -3, 4]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(1, [-2]))---------------------\n",
       "---------------------\n",
@@ -300,7 +306,10 @@
       "---------------------\n",
       "---------------------\n",
       "naman Input Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "naman Output Matrix = [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "naman Output Matrix = [0 2 4 3 2 3 1 4; 2 0 4 3 2 3 1 4; 4 4 0 3 2 1 3 4; 3 3 3 0 1 2 4 3; 2 2 2 1 0 1 1 2; 3 3 1 2 1 0 2 1; 1 1 3 4 1 2 0 1; 4 4 4 3 2 1 1 0]\n",
+      "Matrix2: [0 2 4 3 2 3 1 4; 2 0 4 3 2 3 1 4; 4 4 0 3 2 1 3 4; 3 3 3 0 1 2 4 3; 2 2 2 1 0 1 1 2; 3 3 1 2 1 0 2 1; 1 1 3 4 1 2 0 1; 4 4 4 3 2 1 1 0]\n",
+      "Initial floyd[0 2 4 3 2 3 1 4; 2 0 4 3 2 3 1 4; 4 4 0 3 2 1 3 4; 3 3 3 0 1 2 4 3; 2 2 2 1 0 1 1 2; 3 3 1 2 1 0 2 1; 1 1 3 4 1 2 0 1; 4 4 4 3 2 1 1 0]\n",
+      "Floyd[0 2 4 3 2 3 1 2; 2 0 4 3 2 3 1 2; 4 4 0 3 2 1 3 2; 3 3 3 0 1 2 2 3; 2 2 2 1 0 1 1 2; 3 3 1 2 1 0 2 1; 1 1 3 2 1 2 0 1; 2 2 2 3 2 1 1 0]\n",
       "Dict{Int64,Array}[Dict{Int64,Array}(Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(-4, [7, 6, 1, 2]),Pair{Int64,Array}(-3, [4, 5, 8]),Pair{Int64,Array}(2, [5]),Pair{Int64,Array}(3, [7]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(-2, [3, 5, 8]),Pair{Int64,Array}(1, [5])), Dict{Int64,Array}(Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(-4, [7, 6, 3]),Pair{Int64,Array}(-3, [4, 5, 8]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(-2, [1, 2, 5, 8]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(3, [5]),Pair{Int64,Array}(1, [7])), Dict{Int64,Array}(Pair{Int64,Array}(4, [5]),Pair{Int64,Array}(-4, [7, 6, 4]),Pair{Int64,Array}(-3, [3, 5, 8]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [6]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(-2, [1, 2, 5, 8]),Pair{Int64,Array}(1, [7]))]\n",
       "Make Distance Matrices\n"
      ]
@@ -313,7 +322,8 @@
     "# Make the Set method to work 1st August\n",
     "#     setAdjacencyList(aList)\n",
     "    aList=mat\n",
-    "    distMatrix =  copy(aList)\n",
+    "    global distMatrix =  copy(aList)\n",
+    "#     setAdjacencyList(aList)\n",
     "    println(\"naman Input Matrix = \",distMatrix)\n",
     "    \n",
     "    for i=1:length(mat[:,1])\n",
@@ -322,7 +332,7 @@
     "        distFunc(mat, i, i,visited,depth)\n",
     "    end\n",
     "    \n",
-    "    println(\"naman Output Matrix = \",distMatrix)\n",
+    "    println(\"naman Output Matrix = \",returnDistanceMatrix())\n",
     "    return distMatrix\n",
     "end\n",
     "        \n",
@@ -342,7 +352,6 @@
     "    for k = 1 : n, i = 1 : n, j = 1 : n\n",
     "        dists[i, j] = min(dists[i, k] + dists[k, j],dists[i,j])\n",
     "    end\n",
-    "    println(\"akhri floyd\", dists)\n",
     "    return (dists)\n",
     "end\n",
     "# function floydWarshall(dists)  # graph is 4x4\n",
@@ -567,8 +576,9 @@
     "        matrix= listToMatrix(updatedList)\n",
     "#         println(\"Matrix1: \", matrix)\n",
     "        matrix2= operateDistMatrix(matrix)\n",
-    "#         println(\"Matrix2: \", matrix2)\n",
-    "#         println(\"Floyd\",floydWarshall(matrix2))\n",
+    "        println(\"Matrix2: \", matrix2)\n",
+    "        floyd= floydWarshall(matrix2)\n",
+    "        println(\"Floyd\",floyd)\n",
     "#         print(\"convert to matrix\",matrix)\n",
     "    end\n",
     "    println(adjLists)\n",
@@ -594,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -617,6 +627,13 @@
     "\n",
     "println(any(x->x==5, array))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
