--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -177,8 +177,9 @@
     "     \n",
     "    println(\"Consistent=\",consistent)\n",
     "end\n",
-    " floydWarshall= [0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
-    "checkConsistency(floydWarshall)"
+    "#  floydWarshall= [0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+    "floyd2= [0 2 3 4 2 3 1 2; 2 0 3 4 2 3 1 2; 3 3 0 3 1 2 2 3; 4 4 3 0 2 1 3 2; 2 2 1 2 0 1 1 2; 3 3 2 1 1 0 2 1; 1 1 2 3 1 2 0 1; 2 2 3 2 2 1 1 0]\n",
+    "checkConsistency(floyd2)"
    ]
   },
   {
