Code Cleanup. Divided Respective algorithm into Jl files

--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -2,143 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PreCondition:\n",
-    "# Input: Pair= Hashset-> T (Rooted Triplet) toString({1,2},3)=1 2 3\n",
-    "# Input is a hashset of 3 numbers.\n",
-    "# Input also contains a leaf set two variables x,y\n",
-    "# Output:\n",
-    "#if statement modified to so that it gets added in both ways\n",
-    "function computeSN(T,L,x,y)\n",
-    "    X= [x]\n",
-    "    Z= [y]\n",
-    "\tcomputed= []\n",
-    "\tL1= []\n",
-    "\tL1= copy(L) # Creating a copy to be used again\n",
-    "    while(!isempty(Z)) # Run until Z becomes empty\n",
-    "\t\tz=Z[1]\n",
-    "        for a in X\n",
-    "\t\t\tL= copy(L1)\n",
-    "\t\t\t# Filter starts L- (X U Z)\n",
-    "\t\t\tfor p in X\n",
-    "\t\t\t\tfilter!(x -> x!=p,L) #removing all the elements of X in L\n",
-    "\t\t\tend\n",
-    "\t\t\tfor p in Z\n",
-    "\t\t\t\tfilter!(x -> x!=p,L) #removing all the elements of Z in L\n",
-    "\t\t\tend\n",
-    "\t\t\t# Filter ends  L- (X U Z)\n",
-    "            for c in L\n",
-    "            \ttemp = [a,c,z]\n",
-    "            \ttemp2 = [z,c,a]\n",
-    "\t\t\t\ttemp3=[c,a,z]\n",
-    "\t\t\t\ttemp4=[c,z,a]\n",
-    "            \tif(temp in T && !(temp in computed)) #pseudo code\n",
-    "            \t\t#Z=Z U {c}\n",
-    "\t\t\t\t\tappend!(Z,c)\n",
-    "\t\t\t\t\tZ = unique(Z) # Making Z unique to avoid redundancy\n",
-    "\t\t\t\t\tappend!(computed, temp)\n",
-    "\t\t\t\tend\n",
-    "            \tif(temp2 in T && !(temp2 in computed))\n",
-    "            \t\tappend!(Z,c)\n",
-    "\t\t\t\t\tZ = unique(Z)\n",
-    "\t\t\t\t\tappend!(computed, temp2)\n",
-    "            \tend\n",
-    "\t\t\t\tif(temp3 in T && !(temp3 in computed))\n",
-    "            \t\tappend!(Z,c)\n",
-    "\t\t\t\t\tZ = unique(Z)\n",
-    "\t\t\t\t\tappend!(computed, temp3)\n",
-    "            \tend\n",
-    "\t\t\t\tif(temp3 in T && !(temp4 in computed))\n",
-    "            \t\tappend!(Z,c)\n",
-    "\t\t\t\t\tZ = unique(Z)\n",
-    "\t\t\t\t\tappend!(computed, temp4)\n",
-    "            \tend\n",
-    "            \t#or contains!(T,temp2))\n",
-    "            end\n",
-    "\t\t\t# print(\"X=\",string(X))\n",
-    "\t\t\t# println()\n",
-    "\t\t\t# print(\"Z=\",string(Z))\n",
-    "        end\n",
-    "        h =Z[1]\n",
-    "        append!(X,h)\n",
-    "        splice!(Z,1)\n",
-    "\t\t# println(Z)\n",
-    "    end\n",
-    "\tX=sort(X)\n",
-    "    return unique(X)\t\t\t#Returns a SubNetwork\n",
-    "end\n",
-    "\n",
-    "function maximalSubsets(SNs, L)\n",
-    "\t\t# SNs are sorted according to its size\n",
-    "\t\tsortBySize(SNs)\n",
-    "\t\tfilter!(x -> x!=L,SNs)\n",
-    "\t\t# actually equal to the last element as the list is sorted by size\n",
-    "\t\tindexOfMax = length(SNs) #index Of max is the element with maxmum size\n",
-    "\t\tx=1\n",
-    "\t\tindex=indexOfMax\n",
-    "\t\twhile(index!=1 && index<=length(SNs))\n",
-    "\t\t\tcurMaxElement = SNs[index]\n",
-    "\t\t\t# println(curMaxElement)\n",
-    "\t\t\twhile(x<indexOfMax)\n",
-    "\t\t\t\tif (findin(curMaxElement,SNs[x])!=Int64[] && length(findin(curMaxElement,SNs[x])) == length(SNs[x]))\n",
-    "\t\t\t\t\t# println(\"SN== and curMax=\",SNs[x],curMaxElement)\n",
-    "\t\t\t\t\t# then remove x\n",
-    "\t\t\t\t\tdeleteat!(SNs,x)\n",
-    "\t\t\t\t\t# println(\"Inside If statement\",string(x))\n",
-    "\t\t\t\t\tindexOfMax-=1\n",
-    "\t\t\t\t\tx-=1\n",
-    "\t\t\t\tend\n",
-    "\t\t\t\tx+=1\n",
-    "\t\t\tend\n",
-    "\t\t\tindex-=1\n",
-    "\t\tend\n",
-    "\t\treturn unique(SNs)\n",
-    "end\n",
-    "\n",
-    "function retComputeSN(T,L)\n",
-    "\tpairs=[]\n",
-    "\tfor i in eachindex(L)\n",
-    "\t\tj=i\n",
-    "\t\twhile(j<=length(L))\n",
-    "\t\t\ttemp=[]\n",
-    "\t\t\tappend!(temp,[L[i],L[j]])\n",
-    "\t\t\tappend!(pairs,[temp])\n",
-    "\t\t\tj+=1\n",
-    "\t\tend\n",
-    "\t\ti+=1\n",
-    "\tend\n",
-    "\tres=[]\n",
-    "\tfor element in pairs\n",
-    "\t\ttemp=[]\n",
-    "\t\tappend!(temp,computeSN(T, L,element[1],element[2]))\n",
-    "\t\tappend!(res,[temp])\n",
-    "\tend\n",
-    "\treturn res\n",
-    "end\n",
-    "\n",
-    "function sortBySize(arr)\n",
-    "    i=key=j=0\n",
-    "    # print(i)\n",
-    "    for i=2: length(arr)\n",
-    "        key = arr[i]\n",
-    "        j=i-1\n",
-    "\n",
-    "        while(j>=1 && length(arr[j])>length(key))\n",
-    "            arr[j+1]=arr[j]\n",
-    "            j=j-1\n",
-    "        end\n",
-    "        arr[j+1]=key\n",
-    "    end\n",
-    "    # print(arr)\n",
-    "end\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 120,
    "metadata": {
     "scrolled": true
    },
@@ -154,6 +18,8 @@
    ],
    "source": [
     "include(\"ComputeSN.jl\")\n",
+    "include(\"OneHybridLeaf.jl\")\n",
+    "\n",
     "\n",
     "function levelOne(T,L)\n",
     "\tset_SN = retComputeSN(T,L)\n",
@@ -208,404 +74,6 @@
     "# 1 element - make edge  \n",
     "# 2 elements - make root"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Any[[2, 3, 4], [3, 4, 2], [1, 3, 4], [3, 4, 1]]"
-     ]
-    }
-   ],
-   "source": [
-    "T= [[1,2,3], [1,2,4], [1,2,5], [2,3,4], [3,4,2], [2,3,5], [3,4,5], [1,3,4],\n",
-    "[3,4,1], [1,3,5], [1,4,5], [2,4,5],[2,1,3]]\n",
-    "# L= [1,2,3,4,5]\n",
-    "\n",
-    "#  SNs are created Manually\n",
-    "SNs =[[1,2],[3],[4]] #\n",
-    "a1= SNs[1]\n",
-    "a2= SNs[2]\n",
-    "a3= SNs[3]\n",
-    "ds=[]\n",
-    "# 123 is same as 213 but not same as 132\n",
-    "\n",
-    "consistentTriplets = []\n",
-    "for i in T\n",
-    "    # Assuming we have all the lists of combinations from a1, a2, a3\n",
-    "    # temp1= [a1[1],a2,a3]\n",
-    "    # temp2= [a1[2],a2,a3]\n",
-    "\n",
-    "    if(findin(i,a1)!=Int64[]&&findin(i,a2)!=Int64[]&&findin(i,a3)!=Int64[])\n",
-    "        ds=[i]\n",
-    "#         print(ds)\n",
-    "        append!(consistentTriplets,ds)\n",
-    "    end\n",
-    "end\n",
-    "print(consistentTriplets)\n",
-    "# CheckPoint for June 6\n",
-    "\n",
-    "\n",
-    "# if(ds contains element of a1 replace it by a1)\n",
-    "# if(findin(ds,a1)!=Int64[]&&findin(ds,a2)!=Int64[]&&findin(ds,a3)!=Int64[])\n",
-    "# end\n",
-    "\n",
-    "# TODO for June 6\n",
-    "## "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dict{Int64,Array} with 8 entries:\n",
-       "  4  => [-3]\n",
-       "  -4 => [-2, -3, 3]\n",
-       "  -3 => [4, -4, -1]\n",
-       "  2  => [-2]\n",
-       "  -2 => [1, 2, -4, -1]\n",
-       "  -1 => [-2, -3]\n",
-       "  3  => [-4]\n",
-       "  1  => [-2]"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "include(\"DistanceMatrix.jl\")\n",
-    "\n",
-    "function operateDistMatrix(mat)\n",
-    "# Make the Set method to work 1st August\n",
-    "#     setAdjacencyList(aList)\n",
-    "    aList=mat\n",
-    "    global distMatrix =  copy(aList)\n",
-    "#     setAdjacencyList(aList)\n",
-    "#     println(\"naman Input Matrix = \",distMatrix)\n",
-    "    \n",
-    "    for i=1:length(mat[:,1])\n",
-    "        visited=[]\n",
-    "        depth=0\n",
-    "        distFunc(mat, i, i,visited,depth)\n",
-    "    end\n",
-    "    \n",
-    "#     println(\"naman Output Matrix = \",returnDistanceMatrix())\n",
-    "    return distMatrix\n",
-    "end\n",
-    "        \n",
-    "#  Floyd Warshall Test with real data\n",
-    "function floydWarshall(dists)  # graph is 4x4\n",
-    "    n = 8\n",
-    "    for k = 1 : n, i = 1 : n, j = 1 : n\n",
-    "        dists[i, j] = min(dists[i, k] + dists[k, j],dists[i,j])\n",
-    "    end\n",
-    "    return (dists)\n",
-    "end\n",
-    "\n",
-    "#TODO:  Keep track of the leaf nodes. This algorithm only works for 4 leaf nodes. So remove 5 from Dense to make it work\n",
-    "function checkConsistency(floydWarshall)\n",
-    "   # Given Floyd warshall matrix and adjacency matrix\n",
-    "   #Given Triplets\n",
-    "    T= [[1,2,3], [1,2,4], [2,3,4], [3,4,2], [1,3,4], [3,4,1], [2,1,3]]\n",
-    "    #-1 -2 -3 -4 1234 +9 = 1234 5678\n",
-    "    # we need to know 1234 are the positive nodes.\n",
-    "    # check distance of 12, 23, 13 in the floyd warshall and similarly 12 24 14\n",
-    "    consistent = true\n",
-    "    for i in T\n",
-    "            if(floydWarshall[i[1],i[2]]  >= floydWarshall[i[1],i[3]]  && floydWarshall[i[1],i[2]]  >= floydWarshall[i[2],i[3]])\n",
-    "#                     println(\"Failed case: \", i[1], i[2], i[3])\n",
-    "#                     println(\"floyd result:\", floydWarshall[i[1],i[2]], floydWarshall[i[1],i[3]], floydWarshall[i[2],i[3]])\n",
-    "                    consistent = false\n",
-    "                    break\n",
-    "            end\n",
-    "    end \n",
-    "#     println(\"Consistent=\",consistent)\n",
-    "    return consistent \n",
-    "end\n",
-    "\n",
-    "function removeEdge(dictionary, key, value)\n",
-    "    for i in value\n",
-    "        if(haskey(dictionary,key))\n",
-    "            # append!(dictionary[key],value)\n",
-    "            filter!(x -> x!=i,dictionary[key])\n",
-    "            # if(dictionary[key]== Int64[])\n",
-    "            #  delete!(dictionary,key)\n",
-    "            # end\n",
-    "        end\n",
-    "        if(haskey(dictionary,i))\n",
-    "            # append!(dictionary[key],value)\n",
-    "            filter!(x -> x!=key,dictionary[i])\n",
-    "            # if(dictionary[value]== Int64[])\n",
-    "            #     delete!(dictionary,value)\n",
-    "            # end\n",
-    "        end\n",
-    "    end\n",
-    "    # filter!(x -> x!=value,dictionary[key]) # Removing a value\n",
-    "#     print(dictionary)\n",
-    "end\n",
-    "function addVertex(dictionary, key, value)\n",
-    "    for i in value\n",
-    "        if(haskey(dictionary,key))\n",
-    "            append!(dictionary[key],i) # Appending a value\n",
-    "        else\n",
-    "            dictionary[key]=[i]\n",
-    "        end\n",
-    "        if(haskey(dictionary,i))\n",
-    "            append!(dictionary[i],key) # Appending a value\n",
-    "        else\n",
-    "            dictionary[i]=[key] # Appending a value\n",
-    "        end\n",
-    "    end\n",
-    "end\n",
-    "\n",
-    "\n",
-    "function oneHybridLeaf()\n",
-    "    SNs =[[1,2],[3],[4]]\n",
-    "    a1= SNs[1]\n",
-    "    a2= SNs[2]\n",
-    "    a3= SNs[3]\n",
-    "    ds=[]\n",
-    "    p=[]\n",
-    "    q=[]\n",
-    "    h=[]\n",
-    "\n",
-    "#     if 1 and 3 or 2 and 3 are connected then it is consistent.\n",
-    "#     let a1 be c and r = addEdge(a2,a3)\n",
-    "    c=a1\n",
-    "    u=a2\n",
-    "    v=a3\n",
-    "    \n",
-    "    testDictionary = Dict(zip([1], [[1]]))\n",
-    "\n",
-    "    arrOfDicts = fill!(Array{Dict{Int64,Array}}(3), testDictionary)\n",
-    "\n",
-    "#     println(\"array of Dicts= \", arrOfDicts)\n",
-    "    \n",
-    "    alphas =[a1,a2,a3]\n",
-    "    for i=1:3\n",
-    "        c=alphas[i]\n",
-    "        if(i==1)\n",
-    "            u=alphas[i+1]\n",
-    "            v=alphas[i+2]\n",
-    "        elseif(i==2)\n",
-    "            u=alphas[i-1]\n",
-    "            v=alphas[i+1]\n",
-    "        else\n",
-    "            u=alphas[i-2]\n",
-    "            v=alphas[i-1]\n",
-    "        end\n",
-    "        adjListR=Dict{Int64,Array}()\n",
-    "        internalVertex = -1\n",
-    "        v0=internalVertex\n",
-    "        addVertex(adjListR,v0,u) #3=>-1 and -1=>3,4 and 4=>-1 \n",
-    "        addVertex(adjListR,v0,v) #3=>-1 and -1=>3,4 and 4=>-1 \n",
-    "\n",
-    "        internalVertex -= 1\n",
-    "        p=internalVertex\n",
-    "        internalVertex -= 1\n",
-    "        q=internalVertex\n",
-    "        internalVertex -= 1\n",
-    "        h=internalVertex\n",
-    "\n",
-    "    #     (p,u), (p,h), (q,v),(q,h)\n",
-    "        addVertex(adjListR,p,u)\n",
-    "        addVertex(adjListR,p,[h])\n",
-    "        addVertex(adjListR,q,v)\n",
-    "        addVertex(adjListR,q,[h])\n",
-    "        addVertex(adjListR,h,c)\n",
-    "\n",
-    "        addVertex(adjListR,v0,[p])\n",
-    "        addVertex(adjListR,v0,[q])\n",
-    "        removeEdge(adjListR,v0,u)\n",
-    "        removeEdge(adjListR,v0,v)\n",
-    "        \n",
-    "#         println(\"adjListR==\",adjListR) \n",
-    "#         append!(adjLists,adjListR)\n",
-    "        arrOfDicts[i]=adjListR\n",
-    "#         return adjListR\n",
-    "    end\n",
-    "    return arrOfDicts\n",
-    "end\n",
-    "# oneHybridLeaf()\n",
-    "\n",
-    "function zerosMatrix(size)\n",
-    "    array = zeros(Int64,size)\n",
-    "    container = Array{Int64}[]\n",
-    "    for i=1:size\n",
-    "        push!(container,array)\n",
-    "    end \n",
-    "    return container\n",
-    "end\n",
-    "\n",
-    "function listToMatrix(list)\n",
-    "    matrix = Array{Int64}(length(list),length(list))\n",
-    "    fill!(matrix,0)\n",
-    "#     println(\"length of list: \", length(list))\n",
-    "#     println(\"listToMatrix == \",matrix)\n",
-    "    for i =1:length(list),j=1:length(list)\n",
-    "        if(any(x->x==j, list[i])) #if (list[i] conatins j)\n",
-    "            matrix[i,j] =1\n",
-    "        end\n",
-    "     end\n",
-    "    return matrix\n",
-    "end\n",
-    "\n",
-    "function parseAdjList()\n",
-    "    adjLists=oneHybridLeaf()\n",
-    "#     println(\"--------------------------\")\n",
-    "#     println(\"received adjlist from onehybrid leaf\", adjLists)\n",
-    "#     println(\"--------------------------\")\n",
-    "    # Todo split parse AdjlIst\n",
-    "    \n",
-    "    testDictionary = Dict(zip([1], [[1]]))\n",
-    "    updatedLists = fill!(Array{Dict{Int64,Array}}(3), testDictionary)\n",
-    "#     for i = 1:length(updatedLists)\n",
-    "#         println(\"initial values of adjList\", updatedLists[i])\n",
-    "#     end\n",
-    "    \n",
-    "#     println(\"indexing\", updatedLists[1])\n",
-    "    \n",
-    "    index=1\n",
-    "    consistentAdjList=[]\n",
-    "    for list in adjLists\n",
-    "        copyCurrentList = copy(list)\n",
-    "#         println(\"--\")\n",
-    "#         print(\"adjList123=\",list)\n",
-    "        updatedList = Dict{Int64,Array}()\n",
-    "#         matrix = listToMatrix(list)\n",
-    "        for i in list\n",
-    "            a = collect(keys(list))\n",
-    "            max= maximum(a)*2+1\n",
-    "    \n",
-    "            b = collect(values(list))\n",
-    "            conversion = Dict{Int64,Int64}()\n",
-    "            \n",
-    "            for (key, values) in list\n",
-    "                if(key<0)\n",
-    "                    temp = key\n",
-    "                    key+=max\n",
-    "                    conversion[key]=temp\n",
-    "                end\n",
-    "                for i=1:length(values)\n",
-    "                    if(values[i]<0)\n",
-    "                        values[i]+=max\n",
-    "                    end\n",
-    "                end\n",
-    "#                 println(key, \" ==> \", values)\n",
-    "                updatedList[key] = values\n",
-    "            end\n",
-    "        #     println(\"convertedDict=\",conversion)\n",
-    "        #     println(\"updatedList=\",updatedList)\n",
-    "#             println(\"---------------------\")\n",
-    "        #      sort(collect(updatedList), by=x->x[2])\n",
-    "        #     maxOfKeys = maximum(keys(updatedList))\n",
-    "        end\n",
-    "#         print(\"\\n-----\")\n",
-    "#         print(\"updatedList:= \",updatedList)\n",
-    "#         println(\"-----\")\n",
-    "        \n",
-    "        updatedLists[index] = updatedList\n",
-    "        index=index+1\n",
-    "#         println(\"updatedList of lists=: \",updatedLists)\n",
-    "    end\n",
-    "    \n",
-    "#     println(adjLists)\n",
-    "#     println(\"Make Distance Matrices\")\n",
-    "#     matrix = listToMatrix(updatedList)\n",
-    "#     println(\"AdjacencyMatrix = \",matrix)\n",
-    "#     distanceMatrix = operateDistMatrix(matrix)\n",
-    "# #     floydWarshall =  floydWarshall(matrix)\n",
-    "#     println(\"distance matrix = \", distanceMatrix)\n",
-    "#     println(\"updatedLists\",updatedLists)\n",
-    "    return updatedLists\n",
-    "end\n",
-    "\n",
-    "\n",
-    "function returnConsistentAdjList(adjLists)\n",
-    "    \n",
-    "    consistentAdjList=[]\n",
-    "    updatedLists = parseAdjList()\n",
-    "    index=1\n",
-    "    for updatedList in updatedLists\n",
-    "#         println(\"updated List == \",updatedList)\n",
-    "        matrix= listToMatrix(updatedList)\n",
-    "#         println(\"Matrix1: \", matrix)\n",
-    "        matrix2= operateDistMatrix(matrix)\n",
-    "#         println(\"Matrix2: \", matrix2)\n",
-    "        floyd= floydWarshall(matrix2)\n",
-    "#         println(\"Floyd\",floyd)\n",
-    "#         print(\"convert to matrix\",matrix)\n",
-    "        if(checkConsistency(floyd) == true)\n",
-    "            consistentAdjList= adjLists[index]\n",
-    "#             println(\"current List = \",list)\n",
-    "#             println(\"consistentAdjList\",consistentAdjList)\n",
-    "        end\n",
-    "        index+=1\n",
-    "    end\n",
-    "    \n",
-    "    return consistentAdjList\n",
-    "end\n",
-    "\n",
-    "function mainOneHybrid()\n",
-    "    initialAdjList = oneHybridLeaf()\n",
-    "    returnConsistentAdjList(initialAdjList)    \n",
-    "end\n",
-    "\n",
-    "mainOneHybrid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "false\n"
-     ]
-    }
-   ],
-   "source": [
-    "# function listToMatrix(list)\n",
-    "#     matrix = zeros(length(list),length(list))\n",
-    "#     print(matrix)\n",
-    "# #    for i =1:length(list) \n",
-    "# #         for j = 1: length(list)\n",
-    "# #             if(\n",
-    "# end\n",
-    "array =[1,2,3]\n",
-    "\n",
-    "println(any(x->x==5, array))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
