Outputs result as adjacency Matrix now

--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -15,26 +15,27 @@
       "consistentN=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2]))\n",
       "Maximal SubsetsArray{Int64,1}[[5], [1, 2, 3, 4]]\n",
       "adjList before adding edge=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2]))\n",
-      "adding 5 to adjListDict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3, -5]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(-5, [-1, 5]),Pair{Int64,Array}(5, [-5]),Pair{Int64,Array}(1, [-2]))\n"
+      "adding 5 to adjListDict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3, -5]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(-5, [-1, 5]),Pair{Int64,Array}(5, [-5]),Pair{Int64,Array}(1, [-2]))\n",
+      "[0 0 0 0 0 0 0 0 1 0; 0 0 0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 0 1 0 0; 0 0 0 0 0 1 0 0 0 0; 0 0 0 0 1 0 0 0 0 1; 0 0 1 0 0 0 0 1 1 0; 0 0 0 1 0 0 1 0 0 1; 1 1 0 0 0 0 1 0 0 1; 0 0 0 0 0 1 0 1 1 0]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "Dict{Int64,Array} with 10 entries:\n",
-       "  4  => [-3]\n",
-       "  -4 => [-2, -3, 3]\n",
-       "  -3 => [4, -4, -1]\n",
-       "  2  => [-2]\n",
-       "  -2 => [1, 2, -4, -1]\n",
-       "  -1 => [-2, -3, -5]\n",
-       "  3  => [-4]\n",
-       "  -5 => [-1, 5]\n",
-       "  5  => [-5]\n",
-       "  1  => [-2]"
+       "  4  => [8]\n",
+       "  -4 => [9, 8, 3]\n",
+       "  -3 => [4, 7, 10]\n",
+       "  2  => [9]\n",
+       "  -2 => [1, 2, 7, 10]\n",
+       "  -1 => [9, 8, 6]\n",
+       "  3  => [7]\n",
+       "  -5 => [10, 5]\n",
+       "  5  => [6]\n",
+       "  1  => [9]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,16 +76,20 @@
     "        addVertex(finalAdjList,-5,[5]) \n",
     "        println(\"adding 5 to adjList\", finalAdjList)\n",
     "        \n",
+    "        adjMatrix = listToMatrix(parseAdjList2(finalAdjList))\n",
+    "        println(adjMatrix)\n",
+    "        \n",
     "    elseif(length(maximumSubsets)>=3)\n",
     "        \n",
-    "        #         oneHybridLeaf(T_prime,maximumSubsets)\n",
-    "        \n",
+    "#         oneHybridLeaf(T_prime,maximumSubsets)\n",
     "        println(\"Maximal Subsets\", maximumSubsets)\n",
     "#         println(\"SetSn\",set_SN)\n",
     "        adjLists= oneHybridLeaf()\n",
     "        global finalAdjList = returnConsistentAdjList(adjLists) \n",
     "        \n",
     "        println(\"consistentN=\",finalAdjList) \n",
+    "        \n",
+    "\n",
     "    end\n",
     "    return finalAdjList\n",
     "end\n",
@@ -105,6 +110,21 @@
     "# 1 element - make edge  \n",
     "# 2 elements - make root"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2]))\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
