half of levelone is dynamic now.

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -39,6 +39,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(any(x->x==0, [1,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "scrolled": true
