--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -12,11 +12,20 @@
      "output_type": "stream",
      "text": [
       "maximal subsets=Array{Int64,1}[[5], [1, 2, 3, 4]]\n",
+      "Maximal Subsets in else case[5]\n",
+      "newAdjListDict{Int64,Array}()\n",
       "maximal subsets=Array{Int64,1}[[3], [4], [1, 2]]\n",
+      "Maximal Subsets in else case[3]\n",
+      "newAdjListDict{Int64,Array}()\n",
+      "Maximal Subsets in else case[4]\n",
+      "newAdjListDict{Int64,Array}()\n",
+      "Maximal Subsets in else case[1, 2]\n",
+      "newAdjListDict{Int64,Array}(Pair{Int64,Array}(2, [-1]),Pair{Int64,Array}(-1, [1, 2]),Pair{Int64,Array}(1, [-1]))\n",
       "SNs before finding consistentcy Array{Int64,1}[[3], [4], [1, 2]]\n",
       "consistentN=Dict{Int64,Array}(Pair{Int64,Array}(4, [-2]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [1, 2, -4, -1]),Pair{Int64,Array}(2, [-3]),Pair{Int64,Array}(-2, [4, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-3]))\n",
-      "Maximal SubsetsArray{Int64,1}[[5], [1, 2, 3, 4]]\n",
+      "Maximal Subsets second if caseArray{Int64,1}[[5], [1, 2, 3, 4]]\n",
       "adjList before adding edge=Dict{Int64,Array}(Pair{Int64,Array}(4, [-2]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [1, 2, -4, -1]),Pair{Int64,Array}(2, [-3]),Pair{Int64,Array}(-2, [4, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-3]))\n",
+      "newNode[5]\n",
       "adding 5 to adjListDict{Int64,Array}(Pair{Int64,Array}(4, [-2]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [1, 2, -4, -1]),Pair{Int64,Array}(2, [-3]),Pair{Int64,Array}(-2, [4, -4, -1]),Pair{Int64,Array}(-1, [-2, -3, -5]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(-5, [-1, 5]),Pair{Int64,Array}(5, [-5]),Pair{Int64,Array}(1, [-3]))\n"
      ]
     },
@@ -36,7 +45,7 @@
        "  1  => [-3]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,24 +66,32 @@
     "\tprintln(\"maximal subsets=\", maximumSubsets)\n",
     "    \n",
     "\tfor SN in maximumSubsets\n",
-    "\t\tif length(SN)>=3\n",
+    "\t\tif (length(SN)>=3)\n",
     "\t\t\t# temp=retComputeSN(T,SN)\n",
     "\t\t\t# maximumSets=maximalSubsets(temp,L)\n",
     "\t\t\t# println(maximumSets)\n",
     "\t\t\tL=SN\n",
     "\t\t\tfinalAdjList= levelOne(T,L, finalAdjList, rootNode)\n",
     "\t\telse\n",
-    "# TODO pending\n",
-    "#             println(\"Maximal Subsets\", maximumSubsets)\n",
-    "# \t\t\tprintln(\"need to make a tree with these 2 nodes/ make adjacency list\")\n",
-    "#            connect these two vertices with a negative node that is minimum\n",
-    "#             of all\n",
+    "            # TODO Check for overlapping\n",
+    "#           println(\"need to make a tree with these 2 nodes/ make adjacency list\")\n",
+    "#           newAdjList = Dict{Int64,Array}()\n",
+    "            println(\"Maximal Subsets in else case\", SN)\n",
+    "            leastNode =-1\n",
+    "            if(length(finalAdjList) > 0)\n",
+    "                leastNode = minimum(collect(keys(finalAdjList)))-1 \n",
+    "            end\n",
     "            \n",
+    "            if(length(SN)==2)\n",
+    "                addVertex(finalAdjList,leastNode,SN)\n",
+    "            end\n",
+    "            println(\"newAdjList\",finalAdjList)\n",
+    "#             return finalAdjList\n",
     "\t\tend\n",
     "\tend\n",
     "    \n",
     "    if(length(maximumSubsets)==2)\n",
-    "        println(\"Maximal Subsets\", maximumSubsets)\n",
+    "        println(\"Maximal Subsets second if case\", maximumSubsets)\n",
     "        println(\"adjList before adding edge=\",finalAdjList) \n",
     "        \n",
     "        if(rootNode==0)\n",
@@ -90,13 +107,18 @@
     "        keysOfAdjList=collect(keys(finalAdjList))\n",
     "        \n",
     "#         println(\"keysOfAdjList\",keysOfAdjList)\n",
+    "        # bug if maximalsubset[1]= 1234 and maximalSubset[2]= 5 and when 4 is in the keys alread\n",
     "        newNode = 0\n",
-    "        if (any(x->x!=maximumSubsets[1], keysOfAdjList))# if keys contains value\n",
-    "            newNode = maximumSubsets[1]\n",
-    "        else\n",
-    "            newNode = maximumSubsets[2]\n",
+    "        for i in maximumSubsets[1]\n",
+    "            if (any(x->x!=maximumSubsets[1], keysOfAdjList))# if keys contains value\n",
+    "                newNode = maximumSubsets[1]\n",
+    "            else\n",
+    "                newNode = maximumSubsets[2]\n",
+    "            end\n",
+    "            break\n",
     "        end\n",
-    "#         println(\"newNode\", newNode)\n",
+    "                     \n",
+    "        println(\"newNode\", newNode)\n",
     "        \n",
     "        addVertex(finalAdjList,rootNode,[newRoot])\n",
     "        addVertex(finalAdjList,newRoot,newNode)\n",
@@ -126,7 +148,7 @@
     "#         [4,5,1], [4,5,2], [3,4,1], [3,5,1], [3,4,2], [3,5,2]]\n",
     "    \n",
     "\tL= [1,2,3,4,5]\n",
-    "\t# set_SN = retComputeSN(T,L)\n",
+    "# \tset_SN = retComputeSN(T,L)\n",
     "\t# # println(set_SN)\n",
     "\t# var =maximalSubsets(set_SN,L)\n",
     "\t# println(\"Maximal Subsets=\",string(var))\n",
@@ -134,12 +156,15 @@
     "#     root node passed as 0\n",
     "\tlevelOne(T,L, adjList, 0)\n",
     "end\n",
-    "main_func()\n",
-    "\n",
-    "# consistent= Dict{Int64,Array}(Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(-4, [7, 6, 3]),Pair{Int64,Array}(-3, [4, 5, 8]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(-2, [1, 2, 5, 8]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(3, [5]),Pair{Int64,Array}(1, [7]))\n",
-    "# 1 element - make edge  \n",
-    "# 2 elements - make root"
+    "main_func()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -602,6 +627,317 @@
     "\n",
     "main_ComputeSN()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADL:Dict{Int64,Array}[Dict{Int64,Array}(Pair{Int64,Array}(4, [-4]),Pair{Int64,Array}(-4, [-2, -3, 4, 5]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(5, [-4]),Pair{Int64,Array}(1, [-2])), Dict{Int64,Array}(Pair{Int64,Array}(4, [-2]),Pair{Int64,Array}(-4, [-2, -3, 1, 2]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-4]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [4, 5, -4, -1]),Pair{Int64,Array}(5, [-2]),Pair{Int64,Array}(1, [-4])), Dict{Int64,Array}(Pair{Int64,Array}(4, [-2]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [1, 2, -4, -1]),Pair{Int64,Array}(2, [-3]),Pair{Int64,Array}(-2, [4, 5, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(5, [-2]),Pair{Int64,Array}(1, [-3]))]\n",
+      "UL: Dict{Int64,Array}[Dict{Int64,Array}(Pair{Int64,Array}(7, [1, 2, 9, 6]),Pair{Int64,Array}(4, [9]),Pair{Int64,Array}(9, [7, 8, 4, 5]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [8]),Pair{Int64,Array}(8, [3, 9, 6]),Pair{Int64,Array}(5, [9]),Pair{Int64,Array}(6, [7, 8]),Pair{Int64,Array}(1, [7])), Dict{Int64,Array}(Pair{Int64,Array}(7, [4, 5, 9, 6]),Pair{Int64,Array}(4, [7]),Pair{Int64,Array}(9, [7, 8, 1, 2]),Pair{Int64,Array}(2, [9]),Pair{Int64,Array}(3, [8]),Pair{Int64,Array}(8, [3, 9, 6]),Pair{Int64,Array}(5, [7]),Pair{Int64,Array}(6, [7, 8]),Pair{Int64,Array}(1, [9])), Dict{Int64,Array}(Pair{Int64,Array}(7, [4, 5, 9, 6]),Pair{Int64,Array}(4, [7]),Pair{Int64,Array}(9, [7, 8, 3]),Pair{Int64,Array}(2, [8]),Pair{Int64,Array}(3, [9]),Pair{Int64,Array}(8, [1, 2, 9, 6]),Pair{Int64,Array}(5, [7]),Pair{Int64,Array}(6, [7, 8]),Pair{Int64,Array}(1, [8]))]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Int64,Array} with 9 entries:\n",
+       "  4  => [-2]\n",
+       "  -4 => [-2, -3, 3]\n",
+       "  -3 => [1, 2, -4, -1]\n",
+       "  2  => [-3]\n",
+       "  -2 => [4, 5, -4, -1]\n",
+       "  -1 => [-2, -3]\n",
+       "  3  => [-4]\n",
+       "  5  => [-2]\n",
+       "  1  => [-3]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "include(\"DistanceMatrix.jl\")\n",
+    "\n",
+    "function filter_T(T, L)\n",
+    "    T2 = copy(T)\n",
+    "    for i in T\n",
+    "        for j in i\n",
+    "#             if (j == node)\n",
+    "            if(!any(x->x==j, L)) #if (list[i] !contains j)\n",
+    "                filter!(x -> x!=i,T2)\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return T2\n",
+    "end\n",
+    "\n",
+    "function operateDistMatrix(mat)\n",
+    "    aList=mat\n",
+    "    global distMatrix =  copy(aList)\n",
+    "    for i=1:length(mat[:,1])\n",
+    "        visited=[]\n",
+    "        depth=0\n",
+    "        distFunc(mat, i, i,visited,depth)\n",
+    "    end\n",
+    "    return distMatrix\n",
+    "end\n",
+    "\n",
+    "#  Floyd Warshall Test with real data\n",
+    "function floydWarshall(dists)  # graph is 4x4\n",
+    "#     println(\"dists in floyd\",dists)\n",
+    "    n = Int64(sqrt(length(dists)))\n",
+    "    for k = 1 : n, i = 1 : n, j = 1 : n\n",
+    "        dists[i, j] = min(dists[i, k] + dists[k, j],dists[i,j])\n",
+    "    end\n",
+    "#     println(\"final Dists\",dists)\n",
+    "    return (dists)\n",
+    "end\n",
+    "\n",
+    "#TODO:  Keep track of the leaf nodes. This algorithm only works for 4 leaf nodes. So remove 5 from Dense to make it work\n",
+    "function checkConsistency(floydWarshall,L,T)\n",
+    "   # Given Floyd warshall matrix and adjacency matrix\n",
+    "   #Given Triplets\n",
+    "    T=filter_T(T, L)\n",
+    "#     T= [[1,2,3], [1,2,4], [2,3,4], [3,4,2], [1,3,4], [3,4,1], [2,1,3]]\n",
+    "    #-1 -2 -3 -4 1234 +9 = 1234 5678\n",
+    "    # we need to know 1234 are the positive nodes.\n",
+    "    # check distance of 12, 23, 13 in the floyd warshall and similarly 12 24 14\n",
+    "    consistent = true\n",
+    "    for i in T\n",
+    "            if(floydWarshall[i[1],i[2]]  >= floydWarshall[i[1],i[3]]  && floydWarshall[i[1],i[2]]  >= floydWarshall[i[2],i[3]])\n",
+    "#                     println(\"Failed case: \", i[1], i[2], i[3])\n",
+    "#                     println(\"floyd result:\", floydWarshall[i[1],i[2]], floydWarshall[i[1],i[3]], floydWarshall[i[2],i[3]])\n",
+    "                    consistent = false\n",
+    "                    break\n",
+    "            end\n",
+    "    end\n",
+    "#     println(\"Consistent=\",consistent)\n",
+    "    return consistent\n",
+    "end\n",
+    "\n",
+    "function removeEdge(dictionary, key, value)\n",
+    "    for i in value\n",
+    "        if(haskey(dictionary,key))\n",
+    "            # append!(dictionary[key],value)\n",
+    "            filter!(x -> x!=i,dictionary[key])\n",
+    "            # if(dictionary[key]== Int64[])\n",
+    "            #  delete!(dictionary,key)\n",
+    "            # end\n",
+    "        end\n",
+    "        if(haskey(dictionary,i))\n",
+    "            # append!(dictionary[key],value)\n",
+    "            filter!(x -> x!=key,dictionary[i])\n",
+    "            # if(dictionary[value]== Int64[])\n",
+    "            #     delete!(dictionary,value)\n",
+    "            # end\n",
+    "        end\n",
+    "    end\n",
+    "    # filter!(x -> x!=value,dictionary[key]) # Removing a value\n",
+    "#     print(dictionary)\n",
+    "end\n",
+    "function addVertex(dictionary, key, value)\n",
+    "    for i in value\n",
+    "        if(haskey(dictionary,key))\n",
+    "            append!(dictionary[key],i) # Appending a value\n",
+    "        else\n",
+    "            dictionary[key]=[i]\n",
+    "        end\n",
+    "        if(haskey(dictionary,i))\n",
+    "            append!(dictionary[i],key) # Appending a value\n",
+    "        else\n",
+    "            dictionary[i]=[key] # Appending a value\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "\n",
+    "function oneHybridLeaf(SNs)\n",
+    "#     SNs =[[3], [1,2], [4]]\n",
+    "    a1= SNs[1]\n",
+    "    a2= SNs[2]\n",
+    "    a3= SNs[3]\n",
+    "    ds=[]\n",
+    "    p=[]\n",
+    "    q=[]\n",
+    "    h=[]\n",
+    "\n",
+    "#     if 1 and 3 or 2 and 3 are connected then it is consistent.\n",
+    "#     let a1 be c and r = addEdge(a2,a3)\n",
+    "    c=a1\n",
+    "    u=a2\n",
+    "    v=a3\n",
+    "\n",
+    "    testDictionary = Dict(zip([1], [[1]]))\n",
+    "\n",
+    "    arrOfDicts = fill!(Array{Dict{Int64,Array}}(3), testDictionary)\n",
+    "\n",
+    "    alphas =[a1,a2,a3]\n",
+    "    for i=1:3\n",
+    "\n",
+    "#         println(\"iteration number\",i)\n",
+    "        c=alphas[i]\n",
+    "        if(i==1)\n",
+    "            u=alphas[i+1]\n",
+    "            v=alphas[i+2]\n",
+    "        elseif(i==2)\n",
+    "            u=alphas[i-1]\n",
+    "            v=alphas[i+1]\n",
+    "        else\n",
+    "            u=alphas[i-2]\n",
+    "            v=alphas[i-1]\n",
+    "        end\n",
+    "        adjListR=Dict{Int64,Array}()\n",
+    "        internalVertex = -1\n",
+    "        v0=internalVertex\n",
+    "        addVertex(adjListR,v0,u) #3=>-1 and -1=>3,4 and 4=>-1\n",
+    "        addVertex(adjListR,v0,v) #3=>-1 and -1=>3,4 and 4=>-1\n",
+    "\n",
+    "#         println(\"adjlist step 1\",adjListR)\n",
+    "\n",
+    "        internalVertex -= 1\n",
+    "        p=internalVertex\n",
+    "        internalVertex -= 1\n",
+    "        q=internalVertex\n",
+    "        internalVertex -= 1\n",
+    "        h=internalVertex\n",
+    "\n",
+    "    #     (p,u), (p,h), (q,v),(q,h)\n",
+    "        addVertex(adjListR,p,u)\n",
+    "        addVertex(adjListR,p,[h])\n",
+    "        addVertex(adjListR,q,v)\n",
+    "        addVertex(adjListR,q,[h])\n",
+    "        addVertex(adjListR,h,c)\n",
+    "        addVertex(adjListR,v0,[p])\n",
+    "        addVertex(adjListR,v0,[q])\n",
+    "        removeEdge(adjListR,v0,u)\n",
+    "        removeEdge(adjListR,v0,v)\n",
+    "        \n",
+    "#         println(\"adjListR final ==\",adjListR)\n",
+    "\n",
+    "        arrOfDicts[i]=adjListR\n",
+    "    end\n",
+    "    return arrOfDicts\n",
+    "end\n",
+    "\n",
+    "function zerosMatrix(size)\n",
+    "    array = zeros(Int64,size)\n",
+    "    container = Array{Int64}[]\n",
+    "    for i=1:size\n",
+    "        push!(container,array)\n",
+    "    end\n",
+    "    return container\n",
+    "end\n",
+    "\n",
+    "# takes positive list after parsing and converts it to adjacency matrix\n",
+    "function listToMatrix(list)\n",
+    "    matrix = Array{Int64}(length(list),length(list))\n",
+    "    fill!(matrix,0)\n",
+    "    for i =1:length(list),j=1:length(list)\n",
+    "        if(any(x->x==j, list[i])) #if (list[i] contains j)\n",
+    "            matrix[i,j] =1\n",
+    "        end\n",
+    "     end\n",
+    "    return matrix\n",
+    "end\n",
+    "\n",
+    "# Makes the negative nodes positive in the list\n",
+    "function parseAdjList(SNs, adjLists2)\n",
+    "#     println(\"received adjlist from onehybrid leaf\", adjLists2)\n",
+    "\n",
+    "    adjListCopy = deepcopy(adjLists2)\n",
+    "    testDictionary = Dict(zip([1], [[1]]))\n",
+    "    updatedLists = fill!(Array{Dict{Int64,Array}}(3), testDictionary)\n",
+    "\n",
+    "    index=1\n",
+    "    consistentAdjList=[]\n",
+    "    for list in adjListCopy\n",
+    "        copyCurrentList = copy(list)\n",
+    "        updatedList = Dict{Int64,Array}()\n",
+    "        for i in list\n",
+    "            a = collect(keys(list))\n",
+    "            max= maximum(a)\n",
+    "\n",
+    "            b = collect(values(list))\n",
+    "            conversion = Dict{Int64,Int64}()\n",
+    "\n",
+    "            for (key, values) in list\n",
+    "                if(key<0)\n",
+    "                    temp = key\n",
+    "                    key*=-1 #Converting negative to positive value \n",
+    "                    key+=max  \n",
+    "                    conversion[key]=temp\n",
+    "                end\n",
+    "                for i=1:length(values)\n",
+    "                    if(values[i]<0)\n",
+    "                        values[i]*=-1\n",
+    "                        values[i]+=max\n",
+    "                    end\n",
+    "                end\n",
+    "                updatedList[key] = values\n",
+    "            end\n",
+    "        end\n",
+    "        updatedLists[index] = updatedList\n",
+    "        index=index+1\n",
+    "    end\n",
+    "    return updatedLists\n",
+    "end\n",
+    "\n",
+    "# iterate through updated list (parsed) list and find the consistent adjList\n",
+    "function returnConsistentAdjList(adjLists,SNs, L, T)\n",
+    "    adjLists_copy= deepcopy(adjLists)\n",
+    "    consistentAdjList=[]\n",
+    "    println(\"ADL:\", adjLists)\n",
+    "    updatedLists = parseAdjList(SNs, adjLists_copy)\n",
+    "    println(\"UL: \",updatedLists)\n",
+    "\n",
+    "    # println(\"adjLists\",adjLists_copy)\n",
+    "    index=1\n",
+    "    for updatedList in updatedLists\n",
+    "        matrix= listToMatrix(updatedList)\n",
+    "        matrix2= operateDistMatrix(matrix)\n",
+    "        floyd= floydWarshall(matrix2)\n",
+    "        if(checkConsistency(floyd,L,T) == true)\n",
+    "            consistentAdjList= adjLists[index]\n",
+    "#             println()\n",
+    "#             println(\"consistentAdjList\",consistentAdjList)\n",
+    "        end\n",
+    "        index+=1\n",
+    "    end\n",
+    "    return consistentAdjList\n",
+    "end\n",
+    "\n",
+    "function mainOneHybrid(SNs)\n",
+    "    initialAdjList = oneHybridLeaf(SNs)\n",
+    "    L=[1,2,3,4]\n",
+    "   T = [[1,2,3], [1,2,4], [1,2,5], [2,3,4], [2,3,5], [4,5,3], [1,3,4], [1,3,5],\n",
+    "        [4,5,1], [4,5,2], [3,4,1], [3,5,1], [3,4,2], [3,5,2]]\n",
+    "    returnConsistentAdjList(initialAdjList, SNs,L,T)\n",
+    "end\n",
+    "\n",
+    "# SNs_test = [[1,2],[3], [4]]\n",
+    "# SNs_test = [[1,2], [4], [3]]\n",
+    "# SNs_test = [[3], [1,2], [4]]\n",
+    "# SNs_test = [[3], [4], [1,2]]\n",
+    "# Failing Test Cases\n",
+    "# SNs_test = [[4], [3],[1,2]]\n",
+    "SNs_test = [[4,5], [1,2],[3]]\n",
+    "\n",
+    "\n",
+    "mainOneHybrid(SNs_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
